fixed alignment issue
reverted back to center left column

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -196,7 +196,13 @@ footer p {
 
 /* Media query for screen widths below 768px (adjust the value as needed) */
 @media (max-width: 767px) {
-  
+  .flex-col { /* Add this class to the flex container */
+    flex-direction: column; /* Change the flex direction to column */
+    align-items: center; /* Center the items horizontally */
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+
+  }
 
   /* Add padding to the flex container to create some spacing between the left and right columns when stacked */
   .flex-col {
@@ -205,21 +211,17 @@ footer p {
   }
 
   /* Remove the fixed positioning for the left column when stacked */
-    .left-column {
-        position: relative;
-        max-height: unset;
-        overflow-y: visible;
-        padding-left: 20; /* Remove the left padding on small screens */
-        margin-bottom: 0px;
-        display: flex;
-        flex-direction: column; /* Stack items vertically */
-        align-items: flex-start; /* Center align the items */
-    }
+  .left-column {
+    position: relative;
+    max-height: unset;
+    overflow-y: visible;
+    padding-left: 0; /* Remove the left padding on small screens */
+    margin-bottom: 0px;
+  }
 
   /* Add spacing between sections when stacked */
-    .right-column section {
-        margin-top: 0px;
-        margin-bottom: 0px;
-        align-items: center; /* Center the items horizontally */
-    }
+  .right-column section {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
 }
